force-app/main/default/objects/Notification__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CARE SERVICE</fullName>
            </value>
            <value>
                <fullName>DISTANT CARE SERVICE</fullName>
            </value>
            <value>
                <fullName>EXCLUSIVE EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>EXCLUSIVE SALES</fullName>
                <isActive>false</isActive>
                <label>EXCLUSIVE SALES</label>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>ONLINE APPOINTMENT</fullName>
            </value>
            <value>
                <fullName>POST CONTACT</fullName>
            </value>
            <value>
                <fullName>WECHAT DIAMOND APPOINTMENT</fullName>
            </value>
            <value>
                <fullName>WECHAT ONLINE APPOINTMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>