force-app/main/default/objects/Notification__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL TEMPLATE</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>EMAIL MARKETING CLOUD</fullName>
            </value>
            <value>
                <fullName>PUSH NOTIFICATION</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WECHAT</fullName>
            </value>
            <value>
                <fullName>REAL TIME</fullName>
            </value>
            <value>
                <fullName>SMS MARKETING CLOUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>