force-app/main/default/objects/Notification__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>ISO 3</inlineHelpText>
    <label>Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>