force-app/main/default/objects/Notification__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <inlineHelpText>ISO 3</inlineHelpText>
    <label>Language</label>
    <length>3</length>
    <type>Text</type>
</CustomField>