force-app/main/default/objects/Notification__c/fields/Planned_DateTime_Push__c.field-meta.xml
<CustomField>
    <fullName>Planned_DateTime_Push__c</fullName>
    <inlineHelpText>Notification to send at this date time</inlineHelpText>
    <label>Planned DateTime Push</label>
    <type>DateTime</type>
</CustomField>