force-app/main/default/objects/Notification__c/fields/Real_Time__c.field-meta.xml
<CustomField>
    <fullName>Real_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Notification sent at the creation of the record</inlineHelpText>
    <label>Real Time</label>
    <type>Checkbox</type>
</CustomField>