force-app/main/default/objects/Notification__c/fields/Relay_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Relay_Datetime__c</fullName>
    <label>Relay Datetime</label>
    <type>DateTime</type>
</CustomField>