force-app/main/default/objects/Notification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>CREATED</fullName>
                <default>true</default>
                <label>CREATED</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>NOT SENT</fullName>
            </value>
            <value>
                <fullName>READY TO SEND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>