force-app/main/default/objects/Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EMAIL TEMPLATE</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>MARKETING CLOUD</fullName>
            </value>
            <value>
                <fullName>PUSH NOTIFICATION</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WECHAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>