force-app/main/default/objects/Notification__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <label>What Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>