force-app/main/default/objects/Notification__c/listViews/EXCLUSIVE_EXPERIENCE.listView-meta.xml
<ListView>
    <fullName>EXCLUSIVE_EXPERIENCE</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Application__c</columns>
    <columns>Channel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>EXCLUSIVE EXPERIENCE</value>
    </filters>
    <label>EXCLUSIVE EXPERIENCE</label>
</ListView>