force-app/main/default/objects/Notification__c/listViews/Message_ONLINE_APPOITMENT.listView-meta.xml
<ListView>
    <fullName>Message_ONLINE_APPOITMENT</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Message_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Client__c</columns>
    <columns>Country__c</columns>
    <columns>Language__c</columns>
    <columns>WhatId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>ONLINE APPOINTMENT</value>
    </filters>
    <label>Message ONLINE APPOITMENT</label>
    <language>en_US</language>
</ListView>