force-app/main/default/objects/Notification__c/listViews/ONLINE_APPOINTMENT.listView-meta.xml
<ListView>
    <fullName>ONLINE_APPOINTMENT</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>Message_Id__c</columns>
    <columns>Client__c</columns>
    <columns>Country__c</columns>
    <columns>Language__c</columns>
    <columns>WhatId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>notContain</operation>
        <value>CHN,USA</value>
    </filters>
    <filters>
        <field>Message_Id__c</field>
        <operation>equals</operation>
        <value>OSAE2</value>
    </filters>
    <label>ONLINE APPOINTMENT</label>
</ListView>